Added date filter to PM2.5 charts

--- a/war/psi.html
+++ b/war/psi.html
@@ -119,11 +119,9 @@
 				</div>
 			
 				<p class="essay">
-					Stop screaming, children, this is what <a
+					<em>Stop screaming, children, this is what <a
 						href="http://www.channelnewsasia.com/news/asiapacific/indonesia-chides/717798.html"
-						target="_blank">nature wants</a>. Meanwhile, keep calm and <a
-						href="https://www.facebook.com/photo.php?fbid=553580711351375&set=a.188795971163186.39654.182928775083239&type=1"
-						target="_blank">carry on working</a>.
+						target="_blank">nature wants</a>. Meanwhile, keep calm and carry on working.</em>
 				</p>
 				
 				<div class="chart-container">
