--- a/war/index.html
+++ b/war/index.html
@@ -122,9 +122,9 @@
 						target="_blank">nature wants</a>. Meanwhile, keep calm and carry on working.</em>
 				</p>
 
-				<div id="dashboard-pm25" class="chart-container">
-					<div id="pm25" class="chart"></div>
-					<div id="pm25-date-filter"></div>
+				<div id="pm25" class="chart-container">
+					<div id="pm25-chart1" class="chart"></div>
+					<div id="pm25-control1" class="date-slider"></div>
 					<p class="muted">
 						<small>Source: National Environment Agency, <a
 							href="http://app2.nea.gov.sg/anti-pollution-radiation-protection/air-pollution/psi/past-24-hour-psi-readings"
@@ -251,9 +251,9 @@
 												"content" : "<p>Particulate matter is the term for particles found in the air, including dust, dirt, soot, smoke, and liquid droplets.  Particles less than 10 micrometers in diameter (PM10) pose a health concern because they can be inhaled into and accumulate in the respiratory system. Particles less than 2.5 micrometers in diameter (PM2.5) are referred to as <em>fine</em> particles and are believed to pose the greatest health risks. Because of their small size (approximately 1/30th the average width of a human hair), fine particles can lodge deeply into the lungs.</p>"
 											});
 							
-							// Tooltip for chart data link
+							// Tooltip for date sliders
 							
-							$("#pm25-date-filter").tooltip({
+							$("div.date-slider").tooltip({
 									title : "Drag the slider or adjust the thumbs to select a date range",
 									placement : "bottom",
 									html : false,
