Added repo link to footer

--- a/war/psi.html
+++ b/war/psi.html
@@ -214,7 +214,14 @@
 			</div>
 		</div>
 		<hr class="footer-line" />
-		<p class="muted"><small>Feedback to seahrh (at) gmail (dot) com</small></p>
+		<p class="muted">
+			<small>Feedback to seahrh (at) gmail (dot) com. <a
+				href="https://github.com/seahrh/childrenofthehaze/" target="_blank">Get
+					the code</a> on Github. Join the <a
+				href="http://sgratrace.appspot.com/" target="_blank">Great
+					Singapore Rat Race</a>
+			</small>
+		</p>
 	</div>
 	<!-- /.container-fluid -->
 
