--- a/war/index.html
+++ b/war/index.html
@@ -214,7 +214,12 @@
 		</div>
 		<hr class="footer-line" />
 		<p class="muted">
-			<small>Feedback to seahrh (at) gmail (dot) com</small>
+			<small>Feedback to seahrh (at) gmail (dot) com. <a
+				href="https://github.com/seahrh/childrenofthehaze/" target="_blank">Get
+					the code</a> on Github. Join the <a
+				href="http://sgratrace.appspot.com/" target="_blank">Great
+					Singapore Rat Race</a>
+			</small>
 		</p>
 	</div>
 	<!-- /.container-fluid -->
