Removed fixed vAxis gridlines from charts
Vertical axis gridlines are no longer fixed when scrolling the time
slider

--- a/war/index.html
+++ b/war/index.html
@@ -153,7 +153,7 @@
 						href="http://www.channelnewsasia.com/news/singapore/nea-includes-pm2-5-in-its/723582.html"
 						target="_blank">both the 24-hour PSI and the 24-hour PM2.5</a>, <a
 						href="http://youtu.be/xjG-Fyu5MPI" target="_blank">whichever
-						is worse</a>. If that is the case, why isn't the higher level advisory
+						is worse</a>. If that is the case, why isn't the highest level advisory
 					<span class="label label-important">Everyone should avoid
 						all physical activity outdoors</span> issued when PM2.5 exceeded 150?
 				</p>
