--- a/war/psi.html
+++ b/war/psi.html
@@ -142,10 +142,10 @@
 				<p class="essay">
 					The 24-hour PSI lags behind the 3-hour PSI and
 					differences can exceed 200 points. When the 3-hour PSI
-					hit a record high of 401 on 21 June 12pm (A), the 24-hour PSI hit
+					hit a record high of 401 on 21 June 12pm <strong>(A)</strong>, the 24-hour PSI hit
 					a <a
 						href="http://sg.news.yahoo.com/how-does-singapore-measure-haze-levels--142610492.html"
-						target="_blank">record high of 246</a> twenty hours later (B).
+						target="_blank">record high of 246</a> twenty hours later <strong>(B)</strong>.
 				</p>
 
 				<hr />
@@ -166,9 +166,8 @@
 				<p class="essay">
 					Official <a
 						href="http://app2.nea.gov.sg/anti-pollution-radiation-protection/air-pollution/haze/health-advisory-for-haze"
-						target="_blank">health advisories</a> are based on both PSI and
-					PM2.5 <a href="http://youtu.be/xjG-Fyu5MPI"
-						target="_blank">24-hour averages</a>, whichever is worse.
+						target="_blank">health advisories</a> are based on both <a href="http://youtu.be/xjG-Fyu5MPI"
+						target="_blank">24-hour PSI and PM2.5 levels</a>, whichever is worse.
 					That's because 24-hour measurements are <a
 						href="http://www.e101.gov.sg/haze/info.htm"
 						target="_blank">also used</a> by scientific studies on the health
