Hotspots page basic map
Loading the KML works!

--- a/war/psi.html
+++ b/war/psi.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta itemprop="name" content="Children Of The Haze">
 <meta itemprop="description" content="Singapore Haze 2013">
@@ -83,6 +81,7 @@
 					<ul class="nav">
 						<li><a href="index.html">PM2.5</a></li>
 						<li class="active"><a href="psi.html">PSI</a></li>
+						<li><a href="hotspots.html">Hotspots</a></li>
 					</ul>
 					<div id="gplus-button" class="pull-right">
 						<!-- g-plusone button does not display properly if mixed with other css classes -->
