Git Ignore WEB-INF lib and classes directories

--- a/war/hotspots.html
+++ b/war/hotspots.html
@@ -125,12 +125,12 @@
 						placeholder="ddmmyyyy">
 				</div>
 				
-				<p>Dates with high number of hotspots:</p>
+				<p>Hot Dates:</p>
 				
 				<table class="table table-hover table-condensed">
 					<tr>
 						<th>Date</th>
-						<th>Number of hotspots</th>
+						<th># Hotspots</th>
 					</tr>
 					<tr>
 						<td>23072013</td>
