Resolved error fetching KML files from source
Store kml files as static assets in WAR

--- a/war/hotspots.html
+++ b/war/hotspots.html
@@ -132,6 +132,7 @@
 						<th>Date</th>
 						<th># Hotspots</th>
 					</tr>
+					
 					<tr>
 						<td>24062013</td>
 						<td><a href="https://www.facebook.com/photo.php?fbid=576237699094123&set=a.234440306607199.89003.219808688070361&type=1&relevant_count=1" target="_blank">437</a></td>
@@ -139,6 +140,10 @@
 					<tr>
 						<td>23072013</td>
 						<td><a href="https://www.facebook.com/photo.php?fbid=588558541195372&set=a.234440306607199.89003.219808688070361&type=1&permPage=1" target="_blank">292</a></td>
+					</tr>
+					<tr>
+						<td>16082013</td>
+						<td><a href="https://www.facebook.com/photo.php?fbid=600194400031786&set=a.234440306607199.89003.219808688070361&type=1" target="_blank">267</a></td>
 					</tr>
 					<tr>
 						<td>18062013</td>
