--- a/war/index.html
+++ b/war/index.html
@@ -226,6 +226,8 @@
 	<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
 
 	<script type="text/javascript" src="js/haze.js"></script>
+	
+	<script type="text/javascript" src="js/spin.min.js"></script>
 
 	<!-- Required for loading Google Visualization API -->
 	<script type="text/javascript" src="//www.google.com/jsapi"></script>
@@ -241,9 +243,16 @@
 	</script>
 
 	<script type="text/javascript">
+		// Show a spinning load indicator
+		// while the page is loading
+		var spinner;
+	
 		$(document)
 				.ready(
 						function() {
+							
+							// Once the DOM is loaded, start spinning
+							spinner = Haze.UI.LoadAnimation.start();
 
 							$(".infobar #whatpm25")
 									.popover(
@@ -265,6 +274,11 @@
 							});
 							
 						});
+		
+		$(window).load(function(){
+			// Once the page is fully loaded, stop spinning
+			Haze.UI.LoadAnimation.stop(spinner);
+		});
 	</script>
 
 	<!-- Tweet button -->
