Show PSI readings since 1 May, default past 7 days

--- a/war/index.html
+++ b/war/index.html
@@ -128,7 +128,7 @@
                         <div id="overview-control1" class="date-slider"></div>
                         <p class="text-muted">
                             <small>Source: National Environment Agency, <a
-                                href="//app2.nea.gov.sg/anti-pollution-radiation-protection/air-pollution-control/psi/psi-readings-over-the-last-24-hours" target="_blank">PSI readings</a> are updated hourly between 7am and 11pm. Data is left truncated on 7 March 2014. 24-hour PM2.5 readings are no longer available after the <a href="//app2.nea.gov.sg/corporate-functions/newsroom/news-releases/new-air-quality-reporting-system-to-take-effect-from-1-april-2014" target="_blank">new air quality reporting system</a> was effective 1 April 2014. Download the <a href="//docs.google.com/spreadsheet/ccc?key=0ArgBv2Jut0VxdGdiMlJ6ZlM4NGFwUGpvR0RTdlAtRnc&usp=sharing"
+                                href="//app2.nea.gov.sg/anti-pollution-radiation-protection/air-pollution-control/psi/psi-readings-over-the-last-24-hours" target="_blank">PSI readings</a> are updated hourly between 7am and 11pm. 24-hour PM2.5 readings are no longer available after the <a href="//app2.nea.gov.sg/corporate-functions/newsroom/news-releases/new-air-quality-reporting-system-to-take-effect-from-1-april-2014" target="_blank">new air quality reporting system</a> was effective 1 April 2014. The full dataset is left truncated on 7 March 2014. Download the <a href="//docs.google.com/spreadsheet/ccc?key=0ArgBv2Jut0VxdGdiMlJ6ZlM4NGFwUGpvR0RTdlAtRnc&usp=sharing"
                                 target="_blank">spreadsheet</a>.</small>
                         </p>
                     </div>
@@ -137,7 +137,7 @@
                         <div id="regional-control1" class="date-slider"></div>
                         <p class="text-muted">
                             <small>Source: National Environment Agency, <a
-                                href="//app2.nea.gov.sg/anti-pollution-radiation-protection/air-pollution-control/psi/psi-readings-over-the-last-24-hours" target="_blank">PSI readings</a> are updated hourly between 7am and 11pm. Data is left truncated on 7 March 2014. 24-hour PM2.5 readings are no longer available after the <a href="//app2.nea.gov.sg/corporate-functions/newsroom/news-releases/new-air-quality-reporting-system-to-take-effect-from-1-april-2014" target="_blank">new air quality reporting system</a> was effective 1 April 2014. Download the <a href="//docs.google.com/spreadsheet/ccc?key=0ArgBv2Jut0VxdGdiMlJ6ZlM4NGFwUGpvR0RTdlAtRnc&usp=sharing"
+                                href="//app2.nea.gov.sg/anti-pollution-radiation-protection/air-pollution-control/psi/psi-readings-over-the-last-24-hours" target="_blank">PSI readings</a> are updated hourly between 7am and 11pm. 24-hour PM2.5 readings are no longer available after the <a href="//app2.nea.gov.sg/corporate-functions/newsroom/news-releases/new-air-quality-reporting-system-to-take-effect-from-1-april-2014" target="_blank">new air quality reporting system</a> was effective 1 April 2014. The full dataset is left truncated on 7 March 2014. Download the <a href="//docs.google.com/spreadsheet/ccc?key=0ArgBv2Jut0VxdGdiMlJ6ZlM4NGFwUGpvR0RTdlAtRnc&usp=sharing"
                                 target="_blank">spreadsheet</a>.</small>
                         </p>
                     </div>
