--- a/war/hotspots-2013.html
+++ b/war/hotspots-2013.html
@@ -42,8 +42,9 @@
                 m.parentNode.insertBefore(a, m)
             })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-            ga('create', 'UA-41921540-1', 'childrenofthehaze.appspot.com');
+            ga('create', 'UA-41921540-1', 'auto');
             ga('send', 'pageview');
+
         </script>
 
     </head>
