--- a/war/psi-2013.html
+++ b/war/psi-2013.html
@@ -33,8 +33,9 @@
                 m.parentNode.insertBefore(a, m)
             })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-            ga('create', 'UA-41921540-1', 'childrenofthehaze.appspot.com');
+            ga('create', 'UA-41921540-1', 'auto');
             ga('send', 'pageview');
+
         </script>
     </head>
     <body>
@@ -217,7 +218,7 @@
                     </p>
                 </div>
             </div>
-            
+
         </div>
         <!-- /.container-fluid -->
         <div id="footer">
